css/style.css
* {
	box-sizing: border-box;
}

html {
	scroll-behavior: smooth;
}

body,
html {
	height: 100%;
	margin: 0;
	font-size: 16px;
	font-weight: 400;
	font-family: "Lato", sans-serif;
	line-height: 1.8em;
	color: #666;
}

.section-headings {
	position: absolute;
	top: 50%;
	width: 100%;
	text-align: center;
	color: black;
	font-size: 27px;
	text-transform: uppercase;
}

.section-headings .border {
	background-color: #111;
	color: #fff;
	padding: 20px;
}
/* nav {
	display: flex;
	justify-content: space-between;
	align-items: center;
	min-height: 1vh;
	padding-left: 1%;
	background-color: black;
	color: white;
} */
nav {
	display: flex;
}

#menu {
	position: fixed;
	top: 0px;
	width: 100%;
	height: 8%;
	z-index: 9999;
	display: none;
	justify-content: space-between;
	align-items: center;
	min-height: 1vh;
	padding-left: 1%;
	background-color: black;
	color: white;
}

.logo {
	text-transform: uppercase;
	letter-spacing: 3px;
	font-size: 22px;
}

.logo a {
	text-decoration: none;
	color: white;
}

.nav-links {
	display: flex;
	justify-content: space-around;
	align-items: center;
	width: 40%;
}

.nav-links a {
	text-decoration: none;
	letter-spacing: 1px;
	font-weight: bold;
	font-size: 16px;
	color: white;
	padding-bottom: 3%;
}

.nav-links li {
	list-style: none;
}

/* .nav-links a {
	text-decoration: none;
	display: flex;
	list-style: none;
	height: 100%;
	justify-content: space-around;
	align-items: center;
	background-color: red;
} */

/* .nav-links li {
	display: flex;
	list-style: none;
	height: 100%;
	justify-content: space-around;
	align-items: center;
	background-color: red;
} */

/* .nav-links li a {
	justify-content: space-around;
	align-items: center;
	height: 100%;
	text-decoration: none;
	letter-spacing: 1px;
	font-weight: bold;
	font-size: 16px;
	color: white;
} */

.active {
	border-bottom: 2px solid white;
	transition: all 0.6s ease;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
}

.nav-links li a:hover {
	font-size: 20px;
	border-bottom: 2px solid white;
	transition: all 0.4s;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
}

.nav-selected {
	font-size: 20px;
	border-bottom: 2px solid white;
	transition: all 0.4s;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
}

.burger {
	display: none;
	padding-right: 5%;
	cursor: pointer;
	align-self: center;
}

.burger div {
	width: 25px;
	height: 3px;
	background-color: yellow;
	margin: 5px;
	transition: all 0.3s ease;
}

@media screen and (max-width: 1200px) {
	.nav-links {
		width: 50%;
	}
}

@media screen and (max-width: 768px) {
	body {
		overflow-x: hidden;
	}
	.nav-links {
		position: absolute;
		right: 0px;
		height: 92vh;
		top: 8vh;
		background-color: black;
		display: flex;
		flex-direction: column;
		align-items: center;
		width: 50%;
		transform: translateX(100%);
		transition: transform 0.5s ease-in;
		z-index: 1;
		margin-top: 0;
		padding-top: 0;
	}

	.nav-links li {
		opacity: 0;
	}
	.burger {
		display: block;
	}
}

@media (max-width: 568px) {
	.pimg1,
	.pimg2,
	.pimg3 {
		background-attachment: scroll;
	}
}

.nav-active {
	transform: translateX(0%);
}

@keyframes navLinkFade {
	from {
		opacity: 0;
		transform: translateX(50px);
	}
	to {
		opacity: 1;
		transform: translateX(0px);
	}
}

.toggle .line1 {
	transform: rotate(-45deg) translate(-5px, 6px);
}
.toggle .line2 {
	opacity: 0;
}
.toggle .line3 {
	transform: rotate(45deg) translate(-5px, -6px);
}

.pimg1,
.pimg2,
.pimg3,
.pimg4 {
	position: relative;
	opacity: 0.80;
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	background-attachment: fixed;
}

.pimg1 {
	background-image: url(../imgs/homebg.jpg);
	min-height: 100%;
}

.pimg2 {
	background-image: url(../imgs/aboutbg.jpg);
	min-height: 100%;
}

.pimg3 {
	background-image: url(../imgs/experiencesbg.jpg);
	min-height: 100%;
}

.pimg4 {
	background-image: url(../imgs/projectsbg.jpg);
	min-height: 100%;
}

.home-heading {
	position: absolute;
	top: 35%;
	width: 100%;
	text-align: center;
	color: black;
	text-transform: uppercase;
}

.home-heading .name {
	font-size: 55px;
	letter-spacing: 6px;
	font-weight: 500;
}

.home-links a {
	color: black;
	position: relative;
	text-decoration: none;
	padding: 30px;
	font-weight: 500;
	letter-spacing: 1px;
}

.home-links a:hover {
	color: rgba(1, 1, 1, 0.9);
	font-weight: bolder;
	font-size: 20px;
	transition: all 0.3s;
	-webkit-transition: all 0.4s;
	-moz-transition: all 0.4s;
}

